# fastapi-starter

./: .dockerignore  .env_template  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  check_tables.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pg_hba.conf  pyproject.toml  run_app.sh  run_ruff.sh
docker/minio/: Dockerfile
docs/: http_client.md
examples/: external_api_example.py  http_client_advanced.py  http_client_basic_usage.py  http_client_with_auth.py  http_client_with_circuit_breaker.py  http_client_with_rate_limiting.py  http_client_with_retry.py
migrations/: env.py
migrations/versions/: 12-02-2025_create_files_table.py  24-11-2025_db_create_example.py
plans/: minio-unique-filenames.md  rest-client-architecture.md
src/: api.py  background_tasks.py  config.py  database.py  dependencies.py  exceptions.py  logger.py  main.py  model_mixins.py  schemas.py
src/example/: crud.py  models.py  routes.py  schemas.py  sse.py
src/file_storage/: __init__.py  crud.py  models.py  routes.py  schemas.py  service.py
src/http_client/: __init__.py  client.py  config.py  exceptions.py  models.py
src/http_client/auth/: __init__.py  api_key.py  base.py  basic.py  bearer.py  oauth2.py
src/http_client/circuit_breaker/: __init__.py  breaker.py
src/http_client/middleware/: __init__.py  base.py  logging.py  retry.py
src/http_client/rate_limiter/: __init__.py  base.py  token_bucket.py
src/minio_service/: __init__.py  client.py  config.py  crud.py  routes.py  schemas.py  service.py
src/system/health_check/: router.py  routes.py
src/system/home_page/: routes.py
src/system/home_page/templates/: index.html
src/utils/: timezone_utils.py
tests/: conftest.py  test_background_tasks.py
tests/example/: conftest.py  test_basic.py  test_example.py
tests/factories/: __init__.py  example_factory.py  file_factory.py
tests/file_storage/: __init__.py  conftest.py  test_crud.py  test_routes.py  test_service.py
tests/http_client/: __init__.py  test_auth.py  test_circuit_breaker.py  test_config.py  test_exceptions.py  test_integration.py  test_middleware.py  test_rate_limiter.py
tests/minio_service/: __init__.py  conftest.py  test_crud.py  test_routes.py  test_schemas.py  test_service.py
tests/system/: test_health_check.py  test_home_page.py
tests/utils/: test_timezone_utils.py
