[project]
name = "fastapi-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "granian>=2.6.0",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.12.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "granian[reload]>=2.6.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "nest-asyncio>=1.6.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
    "--strict-config"
]

[tool.mypy]
strict = true                               # Максимально строгая проверка
explicit_package_bases = true               # Рассматривать только явно указанные директории как пакеты
exclude = ["venv", ".venv", "alembic"]      # Игнорировать указанные файлы и директории при проверке

[[tool.mypy.overrides]]                     # Секция переопределения настроек
module = [                                  # Указывает, к каким модулям применяются следующие правила
    "pytest.*",
    "pydantic.*",
    "fastapi.*",
    "httpx.*",
    "pytest_asyncio.*",
    "pytz.*"
]
ignore_missing_imports = true               # Игнорировать ошибки "import not found" или "cannot find implementation" для указанных модулей


[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py314"
exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
